src/service/snapshots/tests__minidump_linux-2.snap
---
created: "2019-08-04T19:32:25.187680Z"
creator: insta@0.10.0
source: src/service/symbolication.rs
expression: "{\n    let global_dir =\n        service.config().cache_dir(\"object_meta/global\").unwrap();\n    let mut cache_entries: Vec<_> =\n        fs::read_dir(global_dir).unwrap().map(|x|\n                                                  x.unwrap().file_name().into_string().unwrap()).collect();\n    cache_entries.sort();\n    cache_entries\n}"
---
- local_5d_7b6259552275a3c17bd4c3fd05f5a6bf40caa5
- local_5d_7b6259552275a3c17bd4c3fd05f5a6bf40caa5_debug
- local_6c_5f1875b9048fb4b8dfd832e74ad31a9aafb38f
- local_6c_5f1875b9048fb4b8dfd832e74ad31a9aafb38f_debug
- local_b5_381a457906d279073822a5ceb24c4bfef94ddb
- local_b5_381a457906d279073822a5ceb24c4bfef94ddb_debug
- local_crash_C0BCC3F19827FE653058404B2831D9E60_crash_sym
- local_f1_c3bcc0279865fe3058404b2831d9e64135386c
- local_f1_c3bcc0279865fe3058404b2831d9e64135386c_debug
- local_ld-2_23_so_59627B5D2255A375C17BD4C3FD05F5A60_ld-2_23_so_sym
- local_libc-2_23_so_451A38B5067979D2073822A5CEB24C4B0_libc-2_23_so_sym
- local_linux-gate_so_75185F6C04B9B48FB8DFD832E74AD31A0_linux-gate_so_sym
