src/service/snapshots/tests__minidump_linux.snap
---
created: "2019-08-04T19:30:15.442979Z"
creator: insta@0.10.0
source: src/service/symbolication.rs
expression: response
---
status: completed
timestamp: 1522061032
system_info:
  os_name: Linux
  os_version: 4.9.60-linuxkit-aufs
  os_build: "#1 SMP Mon Nov 6 16:00:12 UTC 2017"
  cpu_arch: x86_64
  device_model: ""
crashed: true
crash_reason: SIGSEGV /0x00000000
assertion: ""
stacktraces:
  - thread_id: 1304
    is_requesting: true
    registers:
      r10: 0x131
      r11: 0x7f5140aca4c0
      r12: 0x401dc0
      r13: 0x7fff5ae4ac90
      r14: 0x7fff5ae4aab0
      r15: 0x0
      r8: 0x0
      r9: 0x0
      rax: 0xffffffffffffffff
      rbp: 0x7fff5ae4abb0
      rbx: 0x7fff5ae4aa20
      rcx: 0x7f5140521b20
      rdi: 0x7fff5ae4aab0
      rdx: 0x7f5140efc000
      rip: 0x401d72
      rsi: 0x0
      rsp: 0x7fff5ae4aa20
    frames:
      - status: missing
        original_index: 0
        instruction_addr: 0x401d72
        package: /work/linux/build/crash
        trust: context
      - status: missing
        original_index: 1
        instruction_addr: 0x7f514025002e
        package: /lib/x86_64-linux-gnu/libc-2.23.so
        trust: scan
      - status: missing
        original_index: 2
        instruction_addr: 0x7f51401e4800
        package: /lib/x86_64-linux-gnu/libc-2.23.so
        trust: scan
      - status: missing
        original_index: 3
        instruction_addr: 0x400000
        package: /work/linux/build/crash
        trust: scan
      - status: missing
        original_index: 4
        instruction_addr: 0x7f5140cebac6
        package: /lib/x86_64-linux-gnu/ld-2.23.so
        trust: scan
      - status: missing
        original_index: 5
        instruction_addr: 0x401ec0
        package: /work/linux/build/crash
        trust: scan
      - status: missing
        original_index: 6
        instruction_addr: 0x414c30
        package: /work/linux/build/crash
        trust: scan
      - status: missing
        original_index: 7
        instruction_addr: 0x7f514017d830
        package: /lib/x86_64-linux-gnu/libc-2.23.so
        trust: scan
      - status: missing
        original_index: 8
        instruction_addr: 0x401c70
        package: /work/linux/build/crash
        trust: scan
      - status: missing
        original_index: 9
        instruction_addr: 0x401dc0
        package: /work/linux/build/crash
        trust: scan
      - status: missing
        original_index: 10
        instruction_addr: 0x401c70
        package: /work/linux/build/crash
        trust: scan
      - status: missing
        original_index: 11
        instruction_addr: 0x414ca0
        package: /work/linux/build/crash
        trust: scan
      - status: missing
        original_index: 12
        instruction_addr: 0x401dc0
        package: /work/linux/build/crash
        trust: scan
      - status: missing
        original_index: 13
        instruction_addr: 0x401de9
        package: /work/linux/build/crash
        trust: scan
      - status: missing
        original_index: 14
        instruction_addr: 0x7fff5aef1000
        package: linux-gate.so
        trust: scan
      - status: missing
        original_index: 15
        instruction_addr: 0x400040
        package: /work/linux/build/crash
        trust: scan
      - status: missing
        original_index: 16
        instruction_addr: 0x7f5140cdc000
        package: /lib/x86_64-linux-gnu/ld-2.23.so
        trust: scan
      - status: missing
        original_index: 17
        instruction_addr: 0x401dc0
        package: /work/linux/build/crash
        trust: scan
modules:
  - debug_status: missing
    unwind_status: missing
    arch: unknown
    type: elf
    code_id: f1c3bcc0279865fe3058404b2831d9e64135386c
    code_file: /work/linux/build/crash
    debug_id: c0bcc3f1-9827-fe65-3058-404b2831d9e6
    debug_file: /work/linux/build/crash
    image_addr: 0x400000
    image_size: 106496
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: elf
    code_id: dfb85de42daffd09640c8fe377d572de3e168920
    code_file: /lib/x86_64-linux-gnu/libm-2.23.so
    debug_id: e45db8df-af2d-09fd-640c-8fe377d572de
    debug_file: /lib/x86_64-linux-gnu/libm-2.23.so
    image_addr: 0x7f513fe54000
    image_size: 1081344
  - debug_status: missing
    unwind_status: missing
    arch: unknown
    type: elf
    code_id: b5381a457906d279073822a5ceb24c4bfef94ddb
    code_file: /lib/x86_64-linux-gnu/libc-2.23.so
    debug_id: 451a38b5-0679-79d2-0738-22a5ceb24c4b
    debug_file: /lib/x86_64-linux-gnu/libc-2.23.so
    image_addr: 0x7f514015d000
    image_size: 1835008
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: elf
    code_id: 68220ae2c65d65c1b6aaa12fa6765a6ec2f5f434
    code_file: /lib/x86_64-linux-gnu/libgcc_s.so.1
    debug_id: e20a2268-5dc6-c165-b6aa-a12fa6765a6e
    debug_file: /lib/x86_64-linux-gnu/libgcc_s.so.1
    image_addr: 0x7f5140527000
    image_size: 90112
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: elf
    code_id: cb93c881929b523c01acef171b52d5261f026029
    code_file: /usr/lib/x86_64-linux-gnu/libstdc++.so.6.0.21
    debug_id: 81c893cb-9b92-3c52-01ac-ef171b52d526
    debug_file: /usr/lib/x86_64-linux-gnu/libstdc++.so.6.0.21
    image_addr: 0x7f514073d000
    image_size: 1515520
  - debug_status: unused
    unwind_status: unused
    arch: unknown
    type: elf
    code_id: ce17e023542265fc11d9bc8f534bb4f070493d30
    code_file: /lib/x86_64-linux-gnu/libpthread-2.23.so
    debug_id: 23e017ce-2254-fc65-11d9-bc8f534bb4f0
    debug_file: /lib/x86_64-linux-gnu/libpthread-2.23.so
    image_addr: 0x7f5140abf000
    image_size: 98304
  - debug_status: missing
    unwind_status: missing
    arch: unknown
    type: elf
    code_id: 5d7b6259552275a3c17bd4c3fd05f5a6bf40caa5
    code_file: /lib/x86_64-linux-gnu/ld-2.23.so
    debug_id: 59627b5d-2255-a375-c17b-d4c3fd05f5a6
    debug_file: /lib/x86_64-linux-gnu/ld-2.23.so
    image_addr: 0x7f5140cdc000
    image_size: 155648
  - debug_status: missing
    unwind_status: unused
    arch: unknown
    type: elf
    code_id: 6c5f1875b9048fb4b8dfd832e74ad31a9aafb38f
    code_file: linux-gate.so
    debug_id: 75185f6c-04b9-b48f-b8df-d832e74ad31a
    debug_file: linux-gate.so
    image_addr: 0x7fff5aef1000
    image_size: 8192
